fixes on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
 }
 .Info-Right-Thick {
   max-width: 120vh;
-  min-width: 100vh;
+  min-width: 50vh;
   margin-top: 5vh;
   margin-bottom: 5vh;
   max-height: 90vh;
